file edits in support of new "config_num" setting

--- a/web-root/softplc-net-config/index.html
+++ b/web-root/softplc-net-config/index.html
@@ -69,6 +69,12 @@
                   <small id="gateway_ip_help" class="form-text text-muted">Enter the IP address of the default internet gateway, e.g. 192.168.1.1 or leave blank</small>
                 </div>
 
+                <div class="form-group">
+                  <label for="config_num">Set Configuration Number to:</label>
+                  <input type="text" class="form-control" name="config_num" id="_config_num" aria-describedby="config_num_help"></input>
+                  <small id="config_num_help" class="form-text text-muted">Set Configuration Number</small>
+                </div>
+
               </div>
 
             </div>
