--- a/web-root/softplc-net-config/saved.html
+++ b/web-root/softplc-net-config/saved.html
@@ -44,6 +44,10 @@
                   <th>3</th>
                   <td>gateway_ip:</td><td>$gateway_ip</td>
                 </tr>
+                <tr>
+                  <th>4</th>
+                  <td>config_num:</td><td>$config_num</td>
+                </tr>
               </tbody>
             </table>
           </div>
