final preparations for 1.0

--- a/web-root/softplc-bnd-config/saved.html
+++ b/web-root/softplc-bnd-config/saved.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css"></link>
-    <title>Siemens Drive Gateway</title>
+    <title>SoftPLC Configuration</title>
   </head>
 
   <body>
