--- a/web-root/softplc-bnd-config/index.html
+++ b/web-root/softplc-bnd-config/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <title>SoftPLC Network Configuration</title>
+    <title>SoftPLC Configuration</title>
     <style>
       th {
         background-color: #e9ecef;
@@ -34,7 +35,7 @@
               <a href="https://softplc.com">
                 <img class="align-self-center img-fluid" alt="splclogo" style="max-width: 33%" src="/images/sm_splc_colorlogo_trans.png"/>
               </a>
-              <h2 style="color: #008CA3;">SoftPLC Network Configuration</h2>
+              <h2 style="color: #008CA3;">SoftPLC Configuration</h2>
             </div>
           </div>
         </div>
@@ -43,6 +44,7 @@
           <div class="col-3">
             <div class="list-group" id="list-tab" role="tablist">
               <a class="list-group-item list-group-item-action active" id="ethernet-tab" data-toggle="list" href="#ethernet" role="tab" aria-controls="ethernet">Ethernet</a>
+              <a class="list-group-item list-group-item-action" id="personality-tab" data-toggle="list" href="#personality" role="tab" aria-controls="personality">Personality</a>
             </div>
           </div>
 
@@ -69,24 +71,32 @@
                   <small id="gateway_ip_help" class="form-text text-muted">Enter the IP address of the default internet gateway, e.g. 192.168.1.1 or leave blank</small>
                 </div>
 
+              </div>
+
+              <div class="tab-pane fade" id="personality" role="tabpanel" aria-labelledby="personality-tab">
                 <div class="form-group">
                   <label for="config_num">Set Configuration Number to:</label>
                   <input type="text" class="form-control" name="config_num" id="_config_num" aria-describedby="config_num_help"></input>
-                  <small id="config_num_help" class="form-text text-muted">Set Configuration Number</small>
+                  <small id="config_num_help" class="form-text text-muted">Set Personality via a Configuration Number</small>
                 </div>
-
               </div>
-
             </div>
+
           </div>
         </div>
 
-        <div class="row justify-content-end">
-          <div class="col-9">
-            <button id="subbtn" class="btn btn-primary btn-lg btn-block" type="submit">Save</button>
-          </div>
-        </div>
+        <div class="row">
 
+            <div class="col-3">
+              <a href="https://www.bdindustrial.com">
+                <img class="align-self-center img-fluid" alt="BnD_logo" style="max-width: 38%" src="/images/BnD_Master_Logo_A.png"/>
+              </a>
+            </div>
+
+            <div class="col-9">
+              <button id="subbtn" class="btn btn-primary btn-lg btn-block" type="submit">Save</button>
+            </div>
+        </div>
       </div>
     </form>
 
@@ -95,9 +105,9 @@
     jQuery first, then Popper.js, then Bootstrap JS.  But the bundle version
     of bootstrap has Popper.js built into it.
     -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="net-config.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="net-config.js"></script>
 
-  </body>
+</body>
 </html>
